--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
+<!DOCTYPE HTML>
 <html> 
   <head> 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="/css/buttons.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
     <h1>Superblog!</h1>
@@ -12,14 +12,14 @@
       <h2><a href="/posts/<%= post.id %>"><%= post.title %></a></h2>
       <p><%= unsafe post.body %></p>
 
-      <form name="delete_<%= post.id %>" action="/posts/<%= post.id %>" method="post" accept-charset="utf-8">
+      <form name="delete" action="/posts/<%= post.id %>" method="post" accept-charset="utf-8">
         <input type="hidden" name="_method" value="delete">
         <input type="hidden" name="id" value="<%= post.id %>">
-        <p><a href="javascript:document.delete_<%= post.id %>.submit()">✖ delete</a>?</p>
+        <button type="submit" value="delete">✖ delete</button>
       </form>
     <% end %>
     <hr>
 
-    <p>Add new entries <a href="/posts/new">here</a>.</p>
+    <p><a class="button green" href="/posts/new">+ new post</a></p>
   </body>
 </html>
