--- a/views/new.erb
+++ b/views/new.erb
@@ -1,17 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
-"http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd"> 
+<!DOCTYPE HTML>
 <html> 
   <head> 
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" href="/css/buttons.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
     <h1>Add new entry</h1>
 
     <form action="/posts" method="post" accept-charset="utf-8">
-      <input type="hidden" name="_method" value="put">
       <p>Title: <input name="title" type="text" value="">
       <p>Body: <textarea name="body" value=""></textarea>
-      <p><input type="submit" value="Add"></p>
+      <p><button type="submit" class="green">save</button></p>
     </form>
   </body>
 </html>
